syntax = "proto3";
package trading;

import "common.proto";

message NewOrderCall {
    common.Exchange exchange = 1;
    common.Symbol symbol = 2;
    common.Side side = 3;
    common.Type type = 4;
    double quantity = 5;
    double price = 6;
    common.TimeInForce time_in_force = 7;
}

message NewOrderReply {
    string order_id = 1;
    common.Exchange exchange = 2;
    common.Symbol symbol = 3;
    common.Status status = 4;
    common.Side side = 5;
    common.Type type = 6;
    double price = 7;
    double quantity = 8;
    double executed = 9;
    common.TimeInForce time_in_force = 10;
    repeated common.Fill fills = 11;
}

message CxlOrderCall {
    string order_id = 3;
    common.Exchange exchange = 1;
    common.Symbol symbol = 2;
}

message CxlOrderReply {
    string order_id = 1;
    common.Exchange exchange = 2;
    common.Symbol symbol = 3;
    common.Status status = 4;
}
